--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,9 @@ jobs:
       run: go get github.com/googlecodelabs/tools/claat
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo Hello, world!
+      run: echo $GOROOT
+    - name: Run a one-line script
+      run: whereis claat
     - name: Run claat help
       run: claat -h
 
