--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Run a one-line script
       run: whereis claat
     - name: Run claat help
-      run: $GOROOT/claat -h
+      run: $GOROOT/bin/claat -h
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
