--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,9 @@ jobs:
       run: go get github.com/googlecodelabs/tools/claat
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo $GOROOT
-    - name: Run a one-line script
-      run: whereis claat
-    - name: Run claat help
-      run: $GOROOT/bin/claat -h
-
+      run: ls $GOROOT
+    - name: Run pwd
+      run: cd && tree
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
