--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Run a one-line script
       run: ls $GOROOT
     - name: Run pwd
-      run: cd && tree
+      run: cd /bin && ls
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
