--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,15 +24,10 @@ jobs:
     - uses: actions/setup-go@v1.0.0
 
     # Run claat test
-    - name: Run claat setup
-      run: $GOROOT/bin/go get github.com/googlecodelabs/tools/claat
     - name: Run wget to retrieve claat
-      run: wget https://github.com/googlecodelabs/tools/releases/download/v2.2.0/claat-linux-amd64
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: ls $GOROOT/bin
-    - name: Run pwd
-      run: cd /bin && ls
+      run: cd /bin && wget https://github.com/googlecodelabs/tools/releases/download/v2.2.0/claat-linux-amd64 -O claat
+    - name: Run claat help
+      run: claat -h
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
