--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,10 @@ jobs:
     - name: Run ls 
       run: ls
     - name: Run claat help
-      run: claat -h
+      run: ./claat -h
+    - name: Copy claat in bin
+      run: cp claat /bin
+      
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
