--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,19 +22,26 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
     - uses: actions/setup-go@v1.0.0
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '10.x'
 
     # Run claat test
     - name: Run wget to retrieve claat
       run: wget https://github.com/googlecodelabs/tools/releases/download/v2.2.0/claat-linux-amd64 -O claat
-    - name: Run ls 
-      run: ls
+    # Make executable
+    - name: Make claat executable
+      run: chmod +x ./claat
+    #Run help
     - name: Run claat help
       run: ./claat -h
+    # Move to bin
     - name: Copy claat in bin
       run: cp claat /bin
+    # Run printenv
       
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
+        npm run generate,
         echo test, and deploy your project.
