--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,24 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  setup-claat:
+    runs-on: ubuntu-latest
+    steps:
+       - uses: actions/setup-go@v1.0.0
+           # Run claat test
+       - name: Run wget to retrieve claat
+         run: wget https://github.com/googlecodelabs/tools/releases/download/v2.2.0/claat-linux-amd64 -O claat
+        # Make executable
+       - name: Make claat executable
+         run: chmod +x ./claat
+        #Run help
+       - name: Run claat help
+         run: ./claat -h
+       - name: Add to env path
+         run: echo "::add-path::./" 
   # This workflow contains a single job called "build"
   build:
+    needs: [setup-claat]
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -21,27 +37,10 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    - uses: actions/setup-go@v1.0.0
+    
     - uses: actions/setup-node@v1
       with:
-        node-version: '10.x'
-
-    # Run claat test
-    - name: Run wget to retrieve claat
-      run: wget https://github.com/googlecodelabs/tools/releases/download/v2.2.0/claat-linux-amd64 -O claat
-    # Make executable
-    - name: Make claat executable
-      run: chmod +x ./claat
-    #Run help
-    - name: Run claat help
-      run: ./claat -h
-    # Move to bin
-    - name: Copy claat in bin
-      run: cp claat /bin
-    # Run printenv
-      
+        node-version: '10.x'      
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        npm run generate,
-        echo test, and deploy your project.
+    - name: Run generate codelab
+      run: npm run generate
