--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ node_modules
 presentations/*
 !presentations/*.md
 
+# Exclude intellij idea configuration
+.idea/
+*.iml
+*.ipr
+
+# Exclude generated code labs
+codelabs/*
+!codelabs/*.md
