--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "collect-codelabs.js",
   "scripts": {
     "start": "http-server .",
-    "prestart": "npm run generate & npm run collect:codelabs",
+    "prestart": "npm run generate && npm run collect:codelabs",
     "generate": "npm run generate:codelabs & npm run generate:presentations",
     "generate:codelabs": "node generate-codelabs.js",
     "generate:presentations": "node generate-presentations.js",
