--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,27 +6,28 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   setup-claat:
     runs-on: ubuntu-latest
     steps:
-       - uses: actions/setup-go@v1.0.0
-           # Run claat test
-       - name: Run wget to retrieve claat
-         run: wget https://github.com/googlecodelabs/tools/releases/download/v2.2.0/claat-linux-amd64 -O claat
+      - uses: actions/setup-go@v1.0.0
+      # Run claat test
+      - name: Run wget to retrieve claat
+        run: wget https://github.com/googlecodelabs/tools/releases/download/v2.2.0/claat-linux-amd64 -O claat
         # Make executable
-       - name: Make claat executable
-         run: chmod +x ./claat
+      - name: Make claat executable
+        run: chmod +x ./claat
         #Run help
-       - name: Run claat help
-         run: ./claat -h
-       - name: Add to env path
-         run: echo "::add-path::./" 
+      - name: Run claat help
+        run: ./claat -h
+      - name: Add to env path
+        run: echo "./" >> $GITHUB_PATH
+
   # This workflow contains a single job called "build"
   build:
     needs: [setup-claat]
@@ -35,15 +36,15 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '10.x'      
-    # Install dependencies
-    - name: Install dependencies
-      run: npm install
-    # Generate sources
-    - name: Run generate codelab
-      run: npm run generate
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "10.x"
+      # Install dependencies
+      - name: Install dependencies
+        run: npm install
+      # Generate sources
+      - name: Run generate codelab
+        run: npm run generate
